# aws-lambda-poetry

./: .gitignore  Makefile  README.md  pyproject.toml
src/: lambda_function.py
tests/: test_lambda_function.py
