[tool.poetry]
name = "aws-lambda-poetry"
version = "0.1.0"
description = ""
authors = ["pirocheto <pirocheto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[tool.pytest.ini_options]
testpaths = ['tests']
addopts = ["-s"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
